--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/wallapper.jpg
+    - assets/icons/happy_mac.png
+    - assets/icons/safari.png
+    - assets/icons/apple_music.png
+    - assets/icons/calander.png
+    - assets/icons/chrome.png
+  #   - images/a_dot_ham.jpeg``
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
